<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    style="@style/PageStyle"
    android:orientation="vertical"
    tools:context=".Main" >

    <TextView
        android:id="@+id/textoBienvenida"
        style="@style/h1"
        android:text="@string/bienvenido" />

    <Button
        android:id="@+id/bt_recetas"
        android:text="@string/bt_recetas"
        style="@style/MenuButton" />

    <Button
        android:id="@+id/bt_publicar"
        android:text="@string/bt_publicar"
        style="@style/MenuButton" />

    <Button
        android:id="@+id/bt_lista"
        android:text="@string/bt_lista"
        style="@style/MenuButton" />

    <Button
        android:id="@+id/bt_salir"
        android:text="@string/bt_salir"
        style="@style/ExitButton" />

</LinearLayout>
