<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center" 
    android:padding="30dip"
    android:background="@drawable/penguinonice">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:gravity="center"
        android:textSize="25sp" 
        android:textColor= "#FF000000"
        android:textStyle="bold"
        android:layout_marginBottom="20dip"
        />

    <Button
        android:id="@+id/Play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Play" 
        android:gravity="center"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/Preferences"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Preferences"
        android:gravity="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Scores"
        android:gravity="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Help"
        android:gravity="center"
        android:textSize="25sp" />
    
    <Button
        android:id="@+id/Aboutme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Aboutme"
        android:gravity="center" 
        android:textSize="25sp"/>
    
    <Button
        android:id="@+id/Exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        android:gravity="center"
        android:textSize="25sp" />

</LinearLayout>