<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    style="@style/PageStyle"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/dificultad"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#C11515" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/facil" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/medio" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/dificil" />

        </LinearLayout>

        <TextView
            android:id="@+id/nombreReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/titulo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#C11515" />

        <EditText
            android:id="@+id/inputTextNombreReceta"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/ingreReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/ingredientes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#C11515" />

        <EditText
            android:id="@+id/inputTextIngReceta"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/elaboracionReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/elaboracion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#C11515" />

        <EditText
            android:id="@+id/inputTextElaReceta"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btEnviarReceta"
            style="@style/BlueButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enviar" />

    </LinearLayout>

    

</ScrollView>
