<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/cofiguraciones"
        app:showAsAction="never"
        android:icon="@drawable/ic_setting_dark"/>
    <item
        android:id="@+id/action_grafica"
        android:orderInCategory="100"
        android:title="@string/action_grafica"
        app:showAsAction="never"
        android:icon="@drawable/ic_assessment_24dp"/>
    <item
        android:id="@+id/action_theme"
        android:orderInCategory="100"
        android:title="@string/tema"
        app:showAsAction="never"
        android:icon="@drawable/ic_grade_24dp"/>
    <item
        android:id="@+id/action_salir"
        android:orderInCategory="100"
        android:title="Salir"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit_to_app_24dp"/>
</menu>
