<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/actionbar_tab_1"
    android:background="@drawable/background_uno"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="28dp"
        android:layout_gravity="center"
        android:text="@string/txt_title_css" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="22dp"
        android:layout_gravity="center"
        android:text="@string/txt_css" />

    <ImageView
        android:layout_width="333dp"
        android:layout_height="250dp"
        android:id="@+id/imageView3"
        android:src="@drawable/jquerycss"
        android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="22dp"
            android:text="@string/txt_css_con"/>
    </LinearLayout>
</ScrollView>