<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/actionbar_tab_1"
    android:background="@drawable/background_uno"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textColor="@color/md_disabled_hint_text"
        android:text="@string/tile_modulo2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:textColor="@color/background"
        android:text="@string/txt_primera" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ejemplo1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="22sp"
            android:textColor="@color/md_disabled_hint_text"
            android:text="@string/txt_modu3" />


    </LinearLayout>
</ScrollView>


