<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_uno"

    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:id="@+id/inv_login"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inv_login"
        android:text="@string/edt_usuario"
        android:id="@+id/usuario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edt_Usuario"
        android:layout_below="@id/usuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edt_contrasenia"
        android:id="@+id/contasenia"
        android:layout_below="@id/edt_Usuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edt_Clave"
        android:layout_below="@id/contasenia"
        android:password="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_acceder"
        android:id="@+id/btn_login"
        android:layout_below="@id/edt_Clave"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrarse"
        android:id="@+id/btn_signup"
        android:onClick="cargar"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent" />



</RelativeLayout>